--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-150.7KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.51MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-710.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.64MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-4.68MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-897.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-978.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-500.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.03MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
