--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,10 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇸🇬 新加坡-1.64MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
-  - {name: 🇨🇳 中国-4.68MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-897.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-849.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-248.1KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-978.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-500.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
@@ -22,10 +22,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
@@ -37,10 +37,10 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
@@ -53,10 +53,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
@@ -73,10 +73,10 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
@@ -88,10 +88,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
@@ -104,10 +104,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
@@ -129,10 +129,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-897.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
