--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.64MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-849.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-248.1KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-4.68MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-978.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-500.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.03MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-849.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-248.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-978.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.55MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
